pulp-metrics-exporter/base/deploymentconfig.yaml
---
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: pulp-metrics-exporter
spec:
  replicas: 1
  selector:
    service: pulp-metrics-exporter
    app.kubernetes.io/name: thoth
    app.kubernetes.io/component: pulp-metrics-exporter
    app.kubernetes.io/managed-by: aicoe-thoth-devops
  template:
    metadata:
      labels:
        service: pulp-metrics-exporter
        app.kubernetes.io/name: thoth
        app.kubernetes.io/component: pulp-metrics-exporter
        app.kubernetes.io/managed-by: aicoe-thoth-devops
    spec:
      containers:
        - name: pulp-metrics-exporter
          image: pulp-metrics-exporter:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: "384Mi"
              cpu: "100m"
            limits:
              memory: "768Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: "/metrics"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 10
          livenessProbe:
            httpGet:
              path: "/metrics"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 45
            periodSeconds: 10
            timeoutSeconds: 10
  test: false
