pulp-metrics-exporter/base/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: pulp-metrics-exporter
spec:
  ports:
    - name: metrics
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    service: pulp-metrics-exporter
